--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1112,7 +1112,7 @@ dialog
   flex-direction: column
   justify-content: space-between
   gap: 2rem
-  min-width: 25.2rem
+  // min-width: 25.2rem
   background-color: #fff
   background-clip: content-box
   border-radius: $radius
@@ -1126,8 +1126,8 @@ dialog
   display: flex
   flex-wrap: nowrap
   justify-content: flex-start
-  width: 23rem
-  height: 23rem
+  width: 21.8rem
+  height: 21.8rem
   overflow-x: auto
   -ms-overflow-style: none
   scrollbar-width: none
@@ -1143,8 +1143,8 @@ dialog
 
 .suggestions__container__list__item__images__link
   display: block
-  width: 23rem
-  height: 23rem
+  width: 21.8rem
+  height: 21.8rem
 
   @media screen and (max-width: $tablet)
     width: 18rem
@@ -1152,8 +1152,8 @@ dialog
 
 .suggestions__container__list__item__images__link__image
   max-width: unset
-  width: 23rem
-  height: 23rem
+  width: 21.8rem
+  height: 21.8rem
 
   @media screen and (max-width: $tablet)
     width: 18rem
@@ -1225,9 +1225,11 @@ dialog
   align-content: center
   border-radius: $radius
   transition: .2s linear
+  z-index: 10
 
   &:hover
     background-color: $pink
+    cursor: pointer
 
   &:hover .suggestions__container__list__item__add_to_cart__text
     color: $white
@@ -1266,6 +1268,7 @@ dialog
 
   &:hover
     background-image: url("../images/icons/heart-pink.svg")
+    cursor: pointer
 
 .suggestions__container__list__item__add_to_favourites--added
   position: absolute
@@ -1283,6 +1286,7 @@ dialog
 
   &:hover
     background-image: url("../images/icons/heart-grey.svg")
+    cursor: pointer
 /* Main -- Suggestions end */
 
 /* Sets start */  
@@ -2989,9 +2993,11 @@ dialog
   align-content: center
   border-radius: $radius
   transition: .2s linear
+  z-index: 10
 
   &:hover
     background-color: $pink
+    cursor: pointer
 
   &:hover .catalogue__products__list__item__add_to_cart__text
     color: $white
@@ -3047,6 +3053,7 @@ dialog
 
   &:hover
     background-image: url("../images/icons/heart-pink.svg")
+    cursor: pointer
 
 .catalogue__products__list__item__add_to_favourites--added
   position: absolute
@@ -3064,6 +3071,7 @@ dialog
 
   &:hover
     background-image: url("../images/icons/heart-grey.svg")
+    cursor: pointer
 
 .navigation
   display: flex
@@ -4207,6 +4215,7 @@ dialog
 
   &:hover
     background-image: url("../images/icons/heart-pink.svg")
+    cursor: pointer
 
 .popup_cart__container__product__add_to_favourites--added
   position: absolute
@@ -4224,6 +4233,7 @@ dialog
 
   &:hover
     background-image: url("../images/icons/heart-grey.svg")
+    cursor: pointer
 
 
 .popup_cart__container__button--order
@@ -4902,6 +4912,7 @@ dialog
 
   &:hover
     background-image: url("../images/icons/heart-pink.svg")
+    cursor: pointer
 
 .popup_search__suggestions__container__list__item__add_to_favourites--added
   position: absolute
@@ -4919,6 +4930,7 @@ dialog
 
   &:hover
     background-image: url("../images/icons/heart-grey.svg")
+    cursor: pointer
 /* POPUP */
 
 /* MENU */
