--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6032,3 +6032,59 @@ dialog
   margin-bottom: 2.2rem
 
 /* Блог */
+/* Личный кабинет */ 
+.account__heading
+  display: inline-block
+  margin-top: 2rem
+  margin-bottom: 4rem
+
+.account__navigation
+  display: flex
+  flex-wrap: wrap
+  gap: .6rem
+  margin-bottom: 4rem
+
+.account__navigation__item
+  padding: .6rem 1.8rem .8rem
+  font-size: 1.4rem
+  font-weight: 500
+  line-height: 130%
+
+.account__navigation__item--active
+  color: #fff
+  background-color: $black
+  cursor: default
+
+.account__form
+  display: flex
+  flex-direction: column
+  gap: 1rem
+
+.account__form__input
+  padding: 1.4rem
+  max-width: 46rem
+  font-size: 1.4rem
+  font-weight: 400
+  line-height: 130%
+  background-color: #fff
+  border-radius: $radius
+
+.account__form__button
+  margin-top: 2.4rem
+  margin-bottom: 1.2rem
+
+  @media screen and (max-width: $tablet)
+    width: 100%
+
+.account__disclamer
+  margin-bottom: 6rem
+  font-size: 1.4rem
+  font-weight: 400
+  line-height: 130%
+  color: $grey-dark2
+  max-width: 60rem
+
+  a
+    color: $pink
+
+/* Личный кабинет */
