FIX: меню в личном кабинете

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4485,6 +4485,12 @@ dialog
   font-size: 1.4rem
   background-color: #fff
 
+.account__form__input[type='date']
+  -moz-appearance: textfield
+  background: #fff
+  color: $grey-dark2
+  border-radius: $radius
+
 .popup_problem__container__form__label
   text-align: center
   color: $pink
