FIX: формат даты в input с днем рождения

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4491,6 +4491,9 @@ dialog
   color: $grey-dark2
   border-radius: $radius
 
+.account__form__input[type='date']::-webkit-calendar-picker-indicator
+  display: none
+
 .popup_problem__container__form__label
   text-align: center
   color: $pink
