--- a/sass/style.sass
+++ b/sass/style.sass
@@ -48,11 +48,6 @@ body
   color: $black
   background-color: $white
   scrollbar-gutter: stable
-  // scrollbar-width: none
-  // -ms-overflow-style: none
-
-  // &::-webkit-scrollbar
-  //   display: none
 
   &:has(dialog[open])
     overflow: hidden
@@ -617,7 +612,6 @@ dialog
   margin: 0 .2rem
   width: .6rem
   height: .6rem
-  // border-radius: $radius
   background-color: $grey3
   cursor: pointer
 
@@ -881,7 +875,6 @@ dialog
 
 .banner__container
   position: relative
-  // display: flex
   width: 100%
   height: 100%
   z-index: 1
@@ -1099,7 +1092,6 @@ dialog
   margin: 6rem auto
   width: 100%
   max-width: 138rem
-  // overflow-x: auto
   overflow-x: hidden
   -ms-overflow-style: none
   scrollbar-width: none
@@ -1142,7 +1134,6 @@ dialog
   flex-direction: column
   justify-content: space-between
   gap: 2rem
-  // min-width: 25.2rem
   background-color: #fff
   background-clip: content-box
   border-radius: $radius
@@ -3268,18 +3259,53 @@ dialog
   grid-template-columns: 7.6rem auto
   gap: 1rem
   padding-right: 1.6rem
+  height: 43rem
 
   @media screen and (max-width: $tablet)
     grid-template-columns: 1fr
     gap: 2rem
     padding: 0
 
-.product__gallery__image
+.product__gallery__big
+  
+  @media screen and (max-width: $tablet)
+    scroll-snap-type: x mandatory
+    display: flex
+    overflow-x: scroll
+    scrollbar-width: none
+    -ms-overflow-style: none
+
+  &::-webkit-scrollbar
+    display: none
+
+.product__gallery__big__item
+  display: none
   width: 100%
+  height: 100%
+  background-color: #fff
+  border-radius: $radius
+  overflow: hidden
+
+  @media screen and (max-width: $tablet)
+    scroll-snap-align: start
+    flex: 0 0 100%
+    display: flex
+    justify-content: center
+    align-items: center
+    padding: 1.5rem
+
+.product__gallery__big__item--active
+  display: flex
+
+.product__gallery__big__item__image
+  display: flex
+  background-color: #fff
   cursor: pointer
   border-radius: $radius
+  object-fit: contain
 
 .product__gallery__preview
+  position: relative
   display: flex
   flex-direction: column
   gap: .3rem
@@ -3287,14 +3313,41 @@ dialog
   @media screen and (max-width: $tablet)
     display: none
 
-.product__gallery__preview__image
-  padding: .8rem
-  width: 100%
-  cursor: pointer
-  background-color: #fff
-  border-radius: $radius
+.product__gallery__preview__list
+  position: relative
+  display: flex
+  flex-direction: column
+  gap: .3rem
+  overflow-y: hidden
+  z-index: 100
 
-.product__gallery__preview__up
+.product__gallery__preview__list__item
+
+.product__gallery__preview__list__item__image
+  padding: .8rem
+  background-color: #fff
+  border: 1px solid #fff
+  border-radius: $radius
+  cursor: pointer
+  object-fit: cover
+
+  &:hover
+    border: 1px solid $pink
+
+.product__gallery__preview__list__item__image--active
+  border: 1px solid $pink
+
+.product__gallery__preview__arrows
+  position: absolute
+  top: 0
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+  width: 100%
+  height: 100%
+
+.product__gallery__preview__arrows__up
+  display: inline-block
   width: 100%
   height: 1.6rem
   background-size: 1.6rem
@@ -3303,7 +3356,8 @@ dialog
   background-position: 50% 50%
   cursor: pointer
 
-.product__gallery__preview__down
+.product__gallery__preview__arrows__down
+  display: inline-block
   width: 100%
   height: 1.6rem
   background-size: 1.6rem
@@ -4133,7 +4187,6 @@ dialog
     outline: none
 
   @media screen and (max-width: $tablet)
-    // position: absolute
     top: 0
     width: 100%
     max-width: 60rem
@@ -4758,7 +4811,6 @@ dialog
   column-gap: 1rem
   width: 100%
   padding: 2rem
-  // overflow: hidden
 
   @media screen and (max-width: $tablet)
     grid-template-areas: "top" "form" "queries" "suggestions" "link"
@@ -4871,8 +4923,6 @@ dialog
   position: relative
   margin: 6rem auto
   width: 100%
-  // max-width: 138rem
-  // overflow-x: auto
   overflow-x: hidden
   -ms-overflow-style: none
   scrollbar-width: none
@@ -5302,9 +5352,6 @@ dialog
 .popup_menu__container__content__list
   display: none
 
-// .test#{$mobile}
-//     background: red !important
-
 #content__1:checked ~ .popup_menu__container__navigation .popup_menu__container__navigation__content .content__1,
 #content__2:checked ~ .popup_menu__container__navigation .popup_menu__container__navigation__content .content__2,
 #content__3:checked ~ .popup_menu__container__navigation .popup_menu__container__navigation__content .content__3,
@@ -5656,9 +5703,6 @@ dialog
   font-weight: 400
   line-height: 130%
   color: #fff
-
-  // @media screen and (max-width: $tablet)
-  //   margin-top: 1.4rem
 
 .blog_article__author__container__title
   grid-area: title
